fixed some layout issues on battle and matchup pages

--- a/app/static/styles/login.css
+++ b/app/static/styles/login.css
@@ -21,6 +21,12 @@ h1 {
     margin: 0px;
 }
 
+h2 {
+    padding: 10px;
+    margin: 0px;
+    text-align: center;
+}
+
 h4 {
     padding: 10px;
     margin: 0px;
@@ -37,7 +43,6 @@ h4 {
     color: dbdbdb;
     background-color: #b20a2c;
     padding: 10px;
-    margin: 0px 10px 10px 10px;
 }
 
 .my-btn:hover {
@@ -48,29 +53,39 @@ h4 {
 
 .card {
     display: flex;
-    margin: 40px auto;
-    padding: 10px;
+    padding: 5px;
+    margin: 5px;
     border-radius: 7.5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     align-items: center;
     width: fit-content;
     background-color: #dbdbdb;
+    width: 225px;
+    /* height: 275px; */
+    height: auto;
 }
 
 .card-body {
     text-align: center;
     align-items: center;
+    padding: 0px;
 }
 
 .card-title {
-    padding: 10px;
+    padding: 5px;
     margin: 0px;
+}
+
+.card-text {
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
 
 .card-img-top {
     border-radius: 7.5px;
-    width: 75%;
-    padding: 10px;
+    width: 110px;
+    height: 110px;
+    padding: 5px;
 }
 
 .form-label {
@@ -124,38 +139,19 @@ h4 {
     padding: 5px;
 }
 
-/* shiny hover */
-
-.shiny-hover-container {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
+.team {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin: 5px;
 }
 
-.shiny-hover {
-    background-color: transparent;
-    border: none;
+.release-btn {
     padding: 0px;
+    margin: 0px;
 }
 
-.shiny-hover:hover {
-    background-color: transparent;
-}
-
-.shiny-hover-container .shiny-hover:hover::after {
-        content: '';
-        position: absolute;
-        bottom: calc(100% + 10px);
-        right: 0;
-        width: 100px;
-        height: 100px;
-        background-size: cover;
-        background-position: center;
-        border: 3px solid #000;
-        border-radius: 5px;
-        background-color: #dbdbdb;
-        background-image: url('https://res.cloudinary.com/shiny24/image/upload/v1669396824/pokemon/shiny_symbol_pokemon_tdxjdc.png');
-        content: 'Shiny preview coming soon!';
-        text-align: center;
-        font-weight: bold;
+.catch-btn {
+    padding: 0px;
+    margin: 0px;
 }
